# system-monitor

./: .gitignore  Makefile  Makefile.am  Makefile.in  README  README.md  TODO  VERSION  application.ini.in  autogen.sh  chrome.manifest  chrome.manifest.in  configure  configure.ac  dist.sh  install.rdf  install.rdf.in  makexpi.bat  makexpi.sh
components/: Makefile  Makefile.am  MonitorData.cpp  MonitorData.h  clCPU.cpp  clCPU.h  clCPUDarwin.cpp  clCPULinux.cpp  clCPUMonitor.cpp  clCPUMonitor.h  clCPUTime.cpp  clCPUTime.h  clCPUWin.cpp  clICPU.idl  clICPUMonitor.idl  clICPUTime.idl  clIMemory.idl  clISystem.idl  clISystemMonitor.idl  clJSSystem.cpp  clMemory.cpp  clMemory.h  clMemoryDarwin.cpp  clMemoryLinux.cpp  clMemoryWin.cpp  clSystem.cpp  clSystem.h  clSystem.js  clSystemModule.cpp  clSystemModule.js  clSystemMonitorModule.cpp  clSystemPermissionGecko1.9.2.js
components/SystemMonitor/: SystemMonitor.sln  SystemMonitor.vcproj
components/gecko1.9.2/: clICPUTime.xpt  clIMemory.xpt
components/gecko2/: clICPU.xpt  clIMemory.xpt  clISystem.xpt
content/: baseOverlay.xul  browserOverlay.xul  config.css  config.js  config.xul  messengerOverlay.xul  overlay.xul  system-monitor.js  system-monitor.xul  transwindow.js
defaults/preferences/: system-monitor.js
locale/en-US/: system-monitor.dtd  system-monitor.properties
locale/ja/: system-monitor.dtd  system-monitor.properties
m4macros/: xulapp.m4  xulrunner.m4
modules/: CPUWin.js  CachedAPI.js  MemoryWin.js  ShutdownListener.js  StringBundle.js  SystemMonitorCPUItem.js  SystemMonitorConfig.js  SystemMonitorItem.js  SystemMonitorItemHandler.js  SystemMonitorManager.js  SystemMonitorMemoryItem.js  SystemMonitorSimpleGraphItem.js  clSystem.js  libgtop.js  shutdown-listener.js  ui.js
modules/Darwin/: cpu.js  memory.js  utils.js
modules/Linux/: utils.js
modules/WINNT/: cpu.js  memory.js  network.js
modules/Win/: cpu.js  memory.js
modules/lib/: Bundle.js  FileUtil.js  Preferences.js  TextUtil.js  confirmWithPopup.js  confirmWithTab.js  jsdeferred.js  mozalloc.js  prefs.js  prmem.js  resizableToolbarItem.jsm  stringBundle.js
platform/Darwin/defaults/preferences/: system-monitor.js
platform/Darwin_x86-gcc3/: chrome.manifest
platform/Darwin_x86-gcc3/components/: clSystemMonitor.dylib
platform/Linux_x86-gcc3/: chrome.manifest
platform/WINNT_x86-msvc/: chrome.manifest
skin/classic/: system-monitor.css
test/: cpu-monitor.html  cpu.test.js  memory-monitor.html  memory.test.js  network.test.js  system-property.test.js  system.test.js
